<resources>
    <string name="app_name">FreeWeather</string>

    <!--NavigationDrawerActivity-->

    <!--Activities-->
    <string name="detailedTemp">Temperature:</string>
    <string name="detailedTherm">Therm. sensation:</string>
    <string name="detailedHum">Humidity:</string>
    <string name="detailedChancePrec">Chance of precipitation:</string>
    <string name="detailedWind">Wind:</string>
    <string name="detailedWindGusts">Wind gusts (max):</string>
    <string name="detailedSnow">Snow levels:</string>
    <string name="detailedUVRadiation">UV Radiation index:</string>
    <string name="detailedQuantityPrecip">Precipitation (quantity):</string>
    <string name="detailedStorm">Storm probability:</string>
    <string name="detailedQuantitySnow">Snow (quantity):</string>
    <string name="detailedProbSnow">Snow probability:</string>
    <string name="permGranted">Permission granted</string>

    <!--Fragments-->
    <string name="favMsg">There is no favourite location saved</string>
    <string name="mapsChoose">Choose a type of map:</string>
    <string name="notifActivate">Activate:</string>
    <string name="notifTime">Notification time:</string>
    <string name="notifLocation">Locality to receive notifications:</string>
    <string name="notifActualAlarm">:</string>
    <string name="location">Location:</string>
    <string name="notifMsg">Your notification will arrive at:</string>
    <string name="activeMsg">Active notification:</string>
    <string name="vegetationDescription">This image is made with a combination of visible and near infrared data from the NOAA-19 satellite, which gives us an idea of the vegetation development. This is because the vegetation strongly absorbs the radiation of the visible channel, but strongly reflects that of the near infrared.</string>
    <string name="thunderDescription">Image of the electric shocks that fell in the national territory during a period of 12 hours.</string>
    <string name="predictionDescription">Significant national maps for the previous or current day, in the time period of 00-12 and 12-24.</string>
    <string name="fireDescription">Last map prepared of estimated meteorological risk levels of forest fires in Spain.</string>
    <string name="radarDescription1">-Reflectivity: the color scale indicates reflectivity intervals in decibels Z.</string>
    <string name="radarDescription2">-Height of the echo stop: the color scale indicates altitude intervals in km.</string>
    <string name="radarDescription3">-Accumulation of precipitation: the color scale indicates intervals of amount of precipitation, in millimeters</string>
    <string name="msgNoFound">There is no location with name</string>
    <string name="msgHTTPError">The prediction could not be obtained due to an error</string>
    <string name="msgLocationEmpty">Please, search a location before</string>
    <string name="msgPermissionsRequired">Permissions are required</string>
    <string name="AdapterItemToday">Tod.</string>
    <string name="AdapterItemTomorrow">Tom.</string>
    <string name="AdapterItemMonday">mon.</string>
    <string name="AdapterItemTuesday">tue.</string>
    <string name="AdapterItemWednesday">wed.</string>
    <string name="AdapterItemThursday">thu.</string>
    <string name="AdapterItemFriday">fri.</string>
    <string name="AdapterItemSaturday">sat.</string>
    <string name="AdapterItemSunday">sun.</string>
    <string name="textChancePrecip">Chance of precipitation</string>
    <string name="textMaxTemps">Maximum temperatures</string>
    <string name="textMinTemps">Minimum temperatures</string>
    <string name="msgFindLocation">Search a location</string>
    <string name="msgNoInternetConnection">There is no Internet connection</string>
    <string name="NoSelection">No selection</string>
    <string name="MeaningfulMap">Meteorological map</string>
    <string name="RadarMap">Radar map</string>
    <string name="RayMap">Ray map</string>
    <string name="FireIndexMap">Fire risk map</string>
    <string name="VegetationMap">Vegetation map</string>
    <string name="notification_title">%1s, %2s</string>
    <string name="country">,Spain</string>

    <!--Menus-->
    <string name="menu_fragment_main_window">Notifications</string>
    <string name="menu_fragment_home">Home</string>
    <string name="menu_fragment_configuracion">Configuration</string>
    <string name="menu_fragment_about_us">About us</string>
    <string name="menu_fragment_search">Search</string>

    <!--ToolBar-->
    <string name="title_home">Home</string>
    <string name="title_geolocation">Geolocation (GPS)</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_map">Maps</string>
    <string name="title_help">Help</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_detailed_time_info">Detailed information</string>

    <string name="tab_text_1">Today</string>
    <string name="tab_text_2">Hourly</string>
    <string name="tab_text_3">Daily</string>
</resources>
