<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mHome"
            android:icon="@drawable/menu_icon_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/mFavorites"
            android:icon="@drawable/menu_icon_favourites"
            android:title="@string/title_favourites" />
        <item
            android:id="@+id/mMaps"
            android:icon="@drawable/menu_icon_geolocation"
            android:title="@string/title_map" />
        <item
            android:id="@+id/mNotifications"
            android:icon="@drawable/menu_notifications"
            android:title="@string/title_notifications" />
        <item
            android:id="@+id/mHelp"
            android:icon="@drawable/menu_help"
            android:title="@string/title_help" />
    </group>
</menu>
